chat assistant added

--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-chat-popup": "^1.1.2",
     "react-dom": "^16.13.1",
     "react-fade-in": "^2.0.0",
+    "react-newline-to-break": "^1.0.6",
+    "react-nl2br": "^1.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^3.4.4",
+    "react-simple-chatbot": "^0.6.1",
+    "reactjs-popup": "^2.0.4",
+    "string-similarity": "^4.0.4",
+    "styled-components": "^5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
